--- a/index.html
+++ b/index.html
@@ -30,23 +30,29 @@
 
 <div class="html_css_container">
     <div class="html_css_div">
-        <img src="imgs/html.png" alt="Картинка HTML">
-        <h2>HTML</h2>
-        <h3>HTML (HyperText Markup Language — «язык гипертекстовой разметки») — самый базовый строительный блок Веба. Он определяет содержание и структуру веб-контента.</h3>
-        <p>Другие технологии, помимо HTML обычно используются для описания внешнего вида/представления (CSS) или функциональности/поведения (JavaScript) веб-страницы.
+        <div class="html_css_div_flex">
+           <div> <img src="imgs/html.png" alt="Картинка HTML"></div>
+            <div><b><h2>HTML</h2></b>
+            <h4>HTML <i>(HyperText Markup Language — «язык гипертекстовой разметки»)</i> — самый базовый строительный блок Веба. Он определяет содержание и структуру веб-контента.</h4>
+            </div>
+        </div>
+            <p>Другие технологии, помимо HTML обычно используются для описания внешнего вида/представления (CSS) или функциональности/поведения (JavaScript) веб-страницы.
 
-            Под гипертекстом ("hypertext") понимаются ссылки, которые соединяют веб-страницы друг с другом либо в пределах одного веб-сайта, либо между веб-сайтами. Ссылки являются фундаментальным аспектом Веба. Загружая контент в Интернет и связывая его со страницами, созданными другими людьми, вы становитесь активным участником Всемирной паутины.
+                Под гипертекстом ("hypertext") понимаются ссылки, которые соединяют веб-страницы друг с другом либо в пределах одного веб-сайта, либо между веб-сайтами. Ссылки являются фундаментальным аспектом Веба. Загружая контент в Интернет и связывая его со страницами, созданными другими людьми, вы становитесь активным участником Всемирной паутины.
 
-            HTML использует разметку ("markup") для отображения текста, изображений и другого контента в веб-браузере.
-            HTML-разметка включает в себя специальные "элементы", такие как и многие другие.</p>
-    </div>
+                HTML использует разметку ("markup") для отображения текста, изображений и другого контента в веб-браузере.
+                HTML-разметка включает в себя специальные "элементы", такие как и многие другие.</p>
+        </div>
+
     <div class="html_css_div">
-        <img src="imgs/CSS.png" alt="Картинка CSS">
-        <h2>CSS</h2>
-        <h3>CSS (Cascading Style Sheets) — это код, который вы используете для стилизации вашей веб-страницы.CSS (Cascading Style Sheets) — это код, который вы используете для стилизации вашей веб-страницы.</h3>
+        <div class="html_css_div_flex">
+            <div><img src="imgs/CSS.png" alt="Картинка CSS"></div>
+            <div>
+             <strong> <h2>CSS</h2></strong>
+              <h4>CSS (Cascading Style Sheets) — это код, который вы используете для стилизации вашей веб-страницы.CSS (Cascading Style Sheets) — это код, который вы используете для стилизации вашей веб-страницы.</h4>
+            </div>     </div>
         <p>Основы CSS помогут вам понять, что вам нужно для начала работы. Мы ответим на такие вопросы как: Как сделать мой текст черным или красным? Как сделать так, чтобы контент появлялся в определенном месте на экране? Как украсить мою веб-страницу с помощью фоновых изображений и цветов? Как и HTML, CSS на самом деле не является языком программирования. Это не язык разметки - это язык таблицы стилей. Это означает, что он позволяет применять стили выборочно к элементам в документах HTML.</p>
-    </div>
-    </div>
+
 </div>
 
 <div class="nav-container">
