--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
             </div>
         </div>
             <p>Другие технологии, помимо HTML обычно используются для описания внешнего вида/представления (CSS) или функциональности/поведения (JavaScript) веб-страницы.
-
-                Под гипертекстом ("hypertext") понимаются ссылки, которые соединяют веб-страницы друг с другом либо в пределах одного веб-сайта, либо между веб-сайтами. Ссылки являются фундаментальным аспектом Веба. Загружая контент в Интернет и связывая его со страницами, созданными другими людьми, вы становитесь активным участником Всемирной паутины.
-
+            </p>
+              <br>
+               <p>Под гипертекстом ("hypertext") понимаются ссылки, которые соединяют веб-страницы друг с другом либо в пределах одного веб-сайта, либо между веб-сайтами. Ссылки являются фундаментальным аспектом Веба. Загружая контент в Интернет и связывая его со страницами, созданными другими людьми, вы становитесь активным участником Всемирной паутины.
+               </p> <br>
+                <p>
                 HTML использует разметку ("markup") для отображения текста, изображений и другого контента в веб-браузере.
                 HTML-разметка включает в себя специальные "элементы", такие как и многие другие.</p>
         </div>
