page1 page2 page3 - done page3 - userpic corrections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="menu-container-index">
         <div class="header_profile_container">
-            <div class="header_profile_picture"><img src="imgs/user_picture.png" alt=""></div>
+            <div class="header_profile_picture"><img src="imgs/user_picture2.png" alt=""></div>
             <div class="header_profile_username">Username</div>
         </div>
     </div>
