--- a/calc.html
+++ b/calc.html
@@ -12,14 +12,15 @@
 <body>
 <header>
     <div class="logo-container">
-        <div class="logo-button">Логотип</div>
+        <a class="logo-button" href="index.html">Логотип</a>
         <div class="logo-title"><p class="logo-title-text">Заголовок на главной</p></div>
     </div>
     <div class="menu-container">
         <div class="menu-button">Таблица Тегов</div>
         <div class="menu-button">Видео</div>
         <div class="menu-button">Аудио</div>
-        <div class="menu-button">Калькулятор</div>
+        <a class="menu-button" href="calc.html">Калькулятор</a>
+
     </div>
 </header>
 <main>
